[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-directory-mcp-server"
version = "0.1.1"
description = "Agent-to-Agent service directory — discover, register and rate AI agent services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "agent-directory", "ai-agents", "service-discovery", "marketplace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agent-directory-mcp-server"
Repository = "https://github.com/AiAgentKarl/agent-directory-mcp-server"

[project.scripts]
agent-directory-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
